--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-png">
     <img src="images/mountain.png" alt="mountain-png">
   </div>
+<div class="hello-container">
+  <img class="circular" id="raj-img" src="images/raj.png" alt="raj-png">
+  <h2>Hello.</h2>
+  <p>I love programming and intrested in IoT and I like to drink Milk.</p>
+
+</div>
+<hr>
+  <div class="skills">
+    <h2>My Skills.</h2>
+    <div class="skills-row">
+      <img id="iot-img" src="images/IoT.png" alt="IoT-png">
+      <h3>Internet of Things</h3>
+      <p>The journey of coding started when I was 13 years old beacuse I wanted to know how gadgets work.Over time, I gained a wealth of experience designing circuits and networking.</p>
+
+    </div>
+    <div class="skills-row">
+      <img id="dsg-img" src="images/innovation.png" alt="innovation-png">
+      <h3>Designing</h3>
+      <p>I like to listen, observe, understand, sympathize, empathize, synthesize, and glean insights that enabled me to make the invisible visible.</p>
+    </div>
+  </div>
 
   </body>
 </html>
