--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Raj Sudarshan's CV</title>
+    <title>Raj Sudarshan's Personal Site</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:wght@100;400&family=Sacramento&display=swap" rel="stylesheet">
