--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
       <p>I like to listen, observe, understand, sympathize, empathize, synthesize, and glean insights that enabled me to make the invisible visible.</p>
     </div>
   </div>
+  <hr>
+  <div class="contact-container">
+    <h2>Get In Touch</h2>
+    <h3>If you love IoT as much as I do.</h3>
+    <p>Study IoT as much a I do?Let's talk about how awesome it is!</p>
+    <input class="btn" type="button" name="Contact Us" value="Contact Us">
+  </div>
+<div class="footer">
+  <a href="https://www.linkedin.com/in/raj-sudarshan-pallikonda-9b54501a0/">linkedin</a>
+  <a href="https://www.facebook.com/rajsudarshanpallkonda">Facebook</a>
+  <a href="https://www.instagram.com/rajsudarshan/">Instagram</a>
+  <p id="copyright">© 2021 Raj Sudarshan Pallikonda</p>
 
+</div>
   </body>
 </html>
